# flos

./: .gdb_history  .gitignore  CMakeLists.txt  CMakePresets.json  base.c  build.bat  build_debug  build_web.bat  colere.h  compile.bat  game.c  main.c  mesh.c  planet.c  plant.c  render.c  run  run_debug  shader.wgsl  ui.c  utils.c  webgpu_utils.h  window.c
res/: planet_shader.wgsl  plant.json  plant_shader.wgsl  shader.wgsl  system.json
